--- a/src/app/doc/button.document.html
+++ b/src/app/doc/button.document.html
@@ -95,7 +95,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<h6>Default Button</h6>
-					<div style="text-align: center;"><go-button label="default button"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="default button" id="button_default"></go-button></div><br>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_1">
@@ -107,7 +107,7 @@
 					</div>
 					<div id="collapse_ex_1" class="collapse" role="tabpanel" aria-labelledby="ex_1">
 						<div class="jumbotron">
-							<code>&lt;go-button label="default button"&gt;&lt;/go-button&gt;</code>
+							<code>&lt;go-button label="default button" id="button_default"&gt;&lt;/go-button&gt;</code>
 						</div>
 					</div>
 				</div>
@@ -115,12 +115,12 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<h6>Color Button</h6>
-					<div style="text-align: center;"><go-button label="primary" buttonColor="primary"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="secondary" buttonColor="secondary"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="success" buttonColor="success"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="info" buttonColor="info"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="warning" buttonColor="warning"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="danger" buttonColor="danger"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="primary" buttonColor="primary" id="button_color_primary"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="secondary" buttonColor="secondary" id="button_color_secondary"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="success" buttonColor="success" id="button_color_success"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="info" buttonColor="info" id="button_color_info"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="warning" buttonColor="warning" id="button_color_warning"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="danger" buttonColor="danger" id="button_color_danger"></go-button></div><br>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_2">
@@ -132,12 +132,12 @@
 					</div>
 					<div id="collapse_ex_2" class="collapse" role="tabpanel" aria-labelledby="ex_2">
 						<div class="jumbotron">
-							<code>&lt;go-button label="primary" buttonColor="primary"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="secondary" buttonColor="secondary"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="success" buttonColor="success"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="info" buttonColor="info"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="warning" buttonColor="warning"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="danger" buttonColor="danger"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="primary" buttonColor="primary" id="button_color_primary"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="secondary" buttonColor="secondary" id="button_color_secondary"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="success" buttonColor="success" id="button_color_success"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="info" buttonColor="info" id="button_color_info"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="warning" buttonColor="warning" id="button_color_warning"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="danger" buttonColor="danger" id="button_color_danger"&gt;&lt;/go-button&gt;</code><br>
 						</div>
 					</div>
 				</div>
@@ -145,12 +145,12 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<h6>Outline Color Button</h6>
-					<div style="text-align: center;"><go-button label="outline-primary" buttonColor="outline-primary"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="outline-secondary" buttonColor="outline-secondary"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="outline-success" buttonColor="outline-success"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="outline-info" buttonColor="outline-info"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="outline-warning" buttonColor="outline-warning"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="outline-danger" buttonColor="outline-danger"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="outline-primary" buttonColor="outline-primary" id="button_color_outline-primary"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="outline-secondary" buttonColor="outline-secondary" id="button_color_outline-secondary"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="outline-success" buttonColor="outline-success" id="button_color_outline-success"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="outline-info" buttonColor="outline-info" id="button_color_outline-info"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="outline-warning" buttonColor="outline-warning" id="button_color_outline-warning"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="outline-danger" buttonColor="outline-danger" id="button_color_outline-danger"></go-button></div><br>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_3">
@@ -162,12 +162,12 @@
 					</div>
 					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
 						<div class="jumbotron">
-							<code>&lt;go-button label="outline-primary" buttonColor="outline-primary"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="outline-secondary" buttonColor="outline-secondary"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="outline-success" buttonColor="outline-success"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="outline-info" buttonColor="outline-info"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="outline-warning" buttonColor="outline-warning"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="outline-danger" buttonColor="outline-danger"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="outline-primary" buttonColor="outline-primary" id="button_color_outline-primary"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="outline-secondary" buttonColor="outline-secondary" id="button_color_outline-secondary"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="outline-success" buttonColor="outline-success" id="button_color_outline-success"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="outline-info" buttonColor="outline-info" id="button_color_outline-info"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="outline-warning" buttonColor="outline-warning" id="button_color_outline-warning"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="outline-danger" buttonColor="outline-danger" id="button_color_outline-danger"&gt;&lt;/go-button&gt;</code><br>
 						</div>
 					</div>
 				</div>
@@ -175,9 +175,9 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<h6>Button Sizing</h6>
-					<div style="text-align: center;"><go-button label="small" buttonColor="primary" buttonSize="sm"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="default size" buttonColor="primary"></go-button></div><br>
-					<div style="text-align: center;"><go-button label="large" buttonColor="primary" buttonSize="lg"></go-button></div><br>
+					<div style="text-align: center;"><go-button label="small" buttonColor="primary" buttonSize="sm" id='button_size_sm'></go-button></div><br>
+					<div style="text-align: center;"><go-button label="default size" buttonColor="primary" id='button_size_default'></go-button></div><br>
+					<div style="text-align: center;"><go-button label="large" buttonColor="primary" buttonSize="lg" id='button_size_lg'></go-button></div><br>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_4">
@@ -189,9 +189,9 @@
 					</div>
 					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
 						<div class="jumbotron">
-							<code>&lt;go-button label="small" buttonColor="primary" buttonSize="sm"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="default size" buttonColor="primary"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="large" buttonColor="primary" buttonSize="lg"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="small" buttonColor="primary" buttonSize="sm" id='button_size_sm'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="default size" buttonColor="primary"  id='button_size_default'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="large" buttonColor="primary" buttonSize="lg" id='button_size_lg'&gt;&lt;/go-button&gt;</code><br>
 						</div>
 					</div>
 				</div>
@@ -199,13 +199,13 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<h6>Image Button &amp; Image Sizing</h6>
-					<div style="text-align: center;"><go-button iconName="camera"></go-button></div><br>
-					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera"></go-button></div><br>
-					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="lg"></go-button></div><br>
-					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="2x"></go-button></div><br>
-					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="3x"></go-button></div><br>
-					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="4x"></go-button></div><br>
-					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="5x"></go-button></div><br>
+					<div style="text-align: center;"><go-button iconName="camera"  id='button_icon'></go-button></div><br>
+					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" id='button_icon_default'></go-button></div><br>
+					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="lg" id='button_icon_lg'></go-button></div><br>
+					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="2x" id='button_icon_2x'></go-button></div><br>
+					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="3x" id='button_icon_3x'></go-button></div><br>
+					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="4x" id='button_icon_4x'></go-button></div><br>
+					<div style="text-align: center;"><go-button buttonColor="success" iconName="camera" iconSize="5x" id='button_icon_5x'></go-button></div><br>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_5">
@@ -217,13 +217,13 @@
 					</div>
 					<div id="collapse_ex_5" class="collapse" role="tabpanel" aria-labelledby="ex_5">
 						<div class="jumbotron">
-							<code>&lt;go-button iconName="camera"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button buttonColor="success" iconName="camera"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="lg"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="2x"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="3x"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="4x"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="5x"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button iconName="camera" id='button_icon'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button buttonColor="success" iconName="camera" id='button_icon_default'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="lg" id='button_icon_lg'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="2x" id='button_icon_2x'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="3x" id='button_icon_3x'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="4x" id='button_icon_4x'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button buttonColor="success" iconName="camera" iconSize="5x" id='button_icon_5x'&gt;&lt;/go-button&gt;</code><br>
 						</div>
 					</div>
 				</div>
@@ -232,8 +232,8 @@
 				<div class="col-md-3">
 					<h6>Image Button with Text</h6>
 					<div style="text-align: center;">
-						<div style="text-align: center;"><go-button label="Snap!" iconName="camera" buttonColor="warning"></go-button></div><br>
-						<div style="text-align: center;"><go-button label="Snap!" iconName="camera" buttonColor="warning" iconPos="right"></go-button></div><br>
+						<div style="text-align: center;"><go-button label="Snap!" iconName="camera" buttonColor="warning" disable="true" id='button_icon_left'></go-button></div><br>
+						<div style="text-align: center;"><go-button label="Snap!" iconName="camera" buttonColor="warning" iconPos="right" disable="true" id='button_icon_right'></go-button></div><br>
 					</div>
 				</div>
 				<div class="col-md-9">
@@ -246,8 +246,8 @@
 					</div>
 					<div id="collapse_ex_6" class="collapse" role="tabpanel" aria-labelledby="ex_6">
 						<div class="jumbotron">
-							<code>&lt;go-button label="Snap!" iconName="camera" buttonColor="warning"&gt;&lt;/go-button&gt;</code><br>
-							<code>&lt;go-button label="Snap!" iconName="camera" buttonColor="warning" iconPos="right"&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="Snap!" iconName="camera" buttonColor="warning" disable="true" id='button_icon_left'&gt;&lt;/go-button&gt;</code><br>
+							<code>&lt;go-button label="Snap!" iconName="camera" buttonColor="warning" iconPos="right" disable="true" id='button_icon_right'&gt;&lt;/go-button&gt;</code><br>
 						</div>
 					</div>
 				</div>
@@ -256,7 +256,7 @@
 				<div class="col-md-3">
 					<h6>Button with Event</h6>
 					<div style="text-align: center;">
-						<go-button label="Click Me" buttonColor="danger" (click)="myClick()"></go-button><go-button label="Reset" buttonColor="danger" (click)="myReset()"></go-button><br>Count: {{count}}
+						<go-button label="Click Me" buttonColor="danger" (click)="myClick()" id='button_event_count'></go-button><go-button label="Reset" buttonColor="danger" (click)="myReset()" id='button_event_reset'></go-button><br>Count: {{count}}
 					</div>
 				</div>
 				<div class="col-md-9">
@@ -269,7 +269,8 @@
 					</div>
 					<div id="collapse_ex_7" class="collapse" role="tabpanel" aria-labelledby="ex_7">
 						<div class="jumbotron">
-							<code>&lt;go-button label="Click Me" buttonColor="danger" (click)="myClick()"&gt;&lt;/go-button&gt; &lt;go-button label="Reset" buttonColor="danger" (click)="myReset()"&gt;&lt;/go-button&gt;</code><br>
+							<p>component.html</p>
+							<code>&lt;go-button label="Click Me" buttonColor="danger" (click)="myClick()" id="button_event_count"&gt;&lt;/go-button&gt; &lt;go-button label="Reset" buttonColor="danger" (click)="myReset()" id="button_event_reset"&gt;&lt;/go-button&gt;</code><br>
 							<code>{{countCode}}</code>
 							<p></p>
 							<p>component.ts</p>
