edit Disabled example

--- a/src/app/doc/accordion.document.html
+++ b/src/app/doc/accordion.document.html
@@ -197,7 +197,7 @@
 					<div class="card-block">
                         <h4> Disabled </h4>
 						<p-accordion id="DisableAccordion">
-                            <p-accordionTab header="Header 1" [disabled]="true" [selected]= "true" id="DisableAccordionTab1">
+                            <p-accordionTab header="Header 1" [disabled]="true" id="DisableAccordionTab1">
                             Content 1
                             </p-accordionTab>
                             <p-accordionTab header="Header 2" id="DisableAccordionTab2">
@@ -259,3 +259,5 @@
 		</div>
 	</div>
 </div>
+
+<!-- test-->
