--- a/src/app/doc/textarea.document.html
+++ b/src/app/doc/textarea.document.html
@@ -62,8 +62,8 @@
 		<div class="jumbotron">
 			<div class="row row-in-tab">
 				<div class="col-md-3">
-					<h6>Disable</h6>
-					<go-textarea label="Disable Text Area" goId="textarea_1" goName="textarea_1" defaultValue="I have a pen" disable="true"></go-textarea>
+					<h6>No Label</h6>
+					<go-textarea goId="textarea_1" goName="textarea_1"></go-textarea>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_1">
@@ -75,15 +75,15 @@
 					</div>
 					<div id="collapse_ex_1" class="collapse" role="tabpanel" aria-labelledby="ex_1">
 						<div class="jumbotron">
-							<code>&lt;go-textarea label="Disable Text Area" goId="textarea_1" goName="textarea_1" defaultValue="I have a pen" disable="true"&gt;&lt;/go-textarea&gt;</code>
+							<code>&lt;go-textarea goId="textarea_1" goName="textarea_1"&gt;&lt;/go-textarea&gt;</code>
 						</div>
 					</div>
 				</div>
 			</div><br>
 			<div class="row row-in-tab">
 				<div class="col-md-3">
-					<h6>Require</h6>
-					<go-textarea label="Require" goId="textarea_2" goName="textarea_2" defaultValue="I have an Apple pen" require="true" colorTheme="success"></go-textarea>
+					<h6>Disable</h6>
+					<go-textarea label="Disable Text Area" goId="textarea_2" goName="textarea_2" defaultValue="I have a pen" disable="true"></go-textarea>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_2">
@@ -95,15 +95,15 @@
 					</div>
 					<div id="collapse_ex_2" class="collapse" role="tabpanel" aria-labelledby="ex_2">
 						<div class="jumbotron">
-							<code>&lt;go-textarea label="Require" goId="textarea_2" goName="textarea_2" defaultValue="I have an Apple pen" require="true" colorTheme="success"&gt;&lt;/go-textarea&gt;</code>
+							<code>&lt;go-textarea label="Disable Text Area" goId="textarea_2" goName="textarea_2" defaultValue="I have a pen" disable="true"&gt;&lt;/go-textarea&gt;</code>
 						</div>
 					</div>
 				</div>
 			</div><br>
 			<div class="row row-in-tab">
 				<div class="col-md-3">
-					<h6>Readonly</h6>
-					<go-textarea label="Readonly" goId="textarea_3" goName="textarea_3" readonly="true" defaultValue="Ah! Apple pen" row="10"></go-textarea>
+					<h6>Require</h6>
+					<go-textarea label="Require" goId="textarea_3" goName="textarea_3" defaultValue="I have an Apple" require="true" colorTheme="success" row="10"></go-textarea>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_3">
@@ -115,15 +115,15 @@
 					</div>
 					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
 						<div class="jumbotron">
-							<code>&lt;go-textarea label="Readonly" goId="textarea_3" goName="textarea_3" readonly="true" defaultValue="Ah! Apple pen" row="10"&gt;&lt;/go-textarea&gt;</code>
+							<code>&lt;go-textarea label="Require" goId="textarea_3" goName="textarea_3" defaultValue="I have an Apple" require="true" colorTheme="success"&gt;&lt;/go-textarea&gt;</code>
 						</div>
 					</div>
 				</div>
 			</div><br>
 			<div class="row row-in-tab">
 				<div class="col-md-3">
-					<h6>No Label</h6>
-					<go-textarea goId="textarea_4" goName="textarea_4"></go-textarea>
+					<h6>Readonly</h6>
+					<go-textarea label="Readonly" goId="textarea_4" goName="textarea_4" readonly="true" defaultValue="Ah! Apple pen"></go-textarea>
 				</div>
 				<div class="col-md-9">
 					<div role="tab" id="ex_4">
@@ -135,7 +135,7 @@
 					</div>
 					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
 						<div class="jumbotron">
-							<code>&lt;go-textarea goId="textarea_4" goName="textarea_4"&gt;&lt;/go-textarea&gt;</code>
+							<code>&lt;go-textarea label="Readonly" goId="textarea_4" goName="textarea_4" readonly="true" defaultValue="Ah! Apple pen" row="10"&gt;&lt;/go-textarea&gt;</code>
 						</div>
 					</div>
 				</div>
