restructure path image asset

--- a/src/app/doc/galleria.document.html
+++ b/src/app/doc/galleria.document.html
@@ -103,7 +103,7 @@
 			<div class="row row-in-tab">
 				<div class="col-md-5">
 					<div class="card-block">
-						<p-galleria id='galleria_effect' [images]="images" [autoPlay]="true" panelWidth="400" panelHeight="313"  transitionInterval="2000" effect="pulse" effectDuration="500" showCaption="false" showFilmStrip="false"></p-galleria>
+						<p-galleria id='galleria_effect' [images]="images" [autoPlay]="true" panelWidth="400" panelHeight="313"  transitionInterval="2000" effect="explode" effectDuration="500" showCaption="true"></p-galleria>
 					</div>
 				</div>
 				<div class="col-md-7">
