--- a/src/app/doc/pulldown-menu.document.html
+++ b/src/app/doc/pulldown-menu.document.html
@@ -65,8 +65,8 @@
 			<div class="row row-in-tab">
 				<div class="col-md-3">
 					<ul class="nav navbar-nav">
-						<go-pulldown-menu headLabel="Menu 1" [pageList]="pageList"></go-pulldown-menu>
-						<go-pulldown-menu headLabel="Menu 2" [pageList]="pageList2"></go-pulldown-menu>
+						<go-pulldown-menu headLabel="Menu 1" [pageList]="pageList" id="pulldown_menu_1"></go-pulldown-menu>
+						<go-pulldown-menu headLabel="Menu 2" [pageList]="pageList2" id="pulldown_menu_2"></go-pulldown-menu>
 					</ul>
 				</div>
 				<div class="col-md-9">
@@ -80,8 +80,8 @@
 					<div id="collapse_ex_1" class="collapse" role="tabpanel" aria-labelledby="ex_1">
 						<div class="jumbotron">
 							<code>&lt;ul class="nav navbar-nav"&gt;</code><br>
-							<code>&nbsp;&nbsp;&nbsp;&nbsp;&lt;go-pulldown-menu headLabel="Menu 1" [pageList]="pageList"&gt;&lt;/go-pulldown-menu&gt;</code><br>
-							<code>&nbsp;&nbsp;&nbsp;&nbsp;&lt;go-pulldown-menu headLabel="Menu 2" [pageList]="pageList2"&gt;&lt;/go-pulldown-menu&gt;</code><br>
+							<code>&nbsp;&nbsp;&nbsp;&nbsp;&lt;go-pulldown-menu headLabel="Menu 1" [pageList]="pageList" id="pulldown_menu_1"&gt;&lt;/go-pulldown-menu&gt;</code><br>
+							<code>&nbsp;&nbsp;&nbsp;&nbsp;&lt;go-pulldown-menu headLabel="Menu 2" [pageList]="pageList2" id="pulldown_menu_2"&gt;&lt;/go-pulldown-menu&gt;</code><br>
 							<code>&lt;/ul&gt;</code><br>
 							<p></p><br>
 							<p>component.ts</p>
