--- a/src/app/doc/table.document.html
+++ b/src/app/doc/table.document.html
@@ -74,8 +74,6 @@
 	<div role="tabpanel" class="tab-pane fade" id="ex">
 		<div class="jumbotron">
 			<span [innerHTML]="introduction_example"></span>
-			<!-- <button class="btn btn-primary" (click)="addData()">Add</button>
-			<button class="btn btn-danger" (click)="removeLastData()">Remove</button>-->
 			<div class="row row-in-tab">
 				<div class="col-md-4">
 					<div class="row">
@@ -118,8 +116,12 @@
 
 			<div class="row row-in-tab">
 				<div class="col-md-4">
-					<go-table class="table table-striped table-border table-hover table-sm" [paging]=true [itemsPerPage]=10 [maxSize]=3 [showCard]="true"
-						cardClass="card-block card-header card-inverse" [filterAll]="false" [columns]="columns_1" [data]="data" (onCellClicked)="cellClick($event)" id="table_basic"></go-table>
+					<strong>Basic and On Cell Clicked</strong><br>
+					<go-table id="table_basic" class="table table-striped table-border table-hover table-sm"
+						[filterAll]="false" cardClass="card-block card-header card-inverse" 
+						[columns]="columns_1" [data]="data" (onCellClicked)="cellClick($event)">
+					</go-table>
+					<span><strong>ช่องที่ถูกคลิก:</strong> {{cellClicked}}</span>
 				</div>
 				<div class="col-md-8">
 					<div role="tab" id="ex_1">
@@ -130,18 +132,21 @@
 					</div>
 					<div id="collapse_ex_1" class="collapse" role="tabpanel" aria-labelledby="ex_1">
 						<div class="jumbotron">
-							<code>{{code_1}}</code>
-							<br><br>
+							<p>component.html</p>
+							<pre><code>{{code_1}}</code></pre><br>
+							<p>component.ts</p>
 							<pre><code>{{column_1_code}}</code></pre>
 						</div>
 					</div>
-					<span>ช่องที่ถูกคลิก: <span [innerHTML]="click"></span></span>
 				</div>
 			</div>
 
 			<div class="row row-in-tab">
 				<div class="col-md-4">
-					<go-table class="table table-striped table-border table-sm" [paging]=false [filterAll]=true [columns]="columns_2" [data]="data" id='table_gb_filter'></go-table>
+					<strong>Sorting and Date</strong><br>
+					<go-table  id="table_sorting" class="table table-striped table-border table-sm" 
+						[paging]="false" [filterAll]="false" [columns]="columns_2" [data]="data">
+					</go-table>
 				</div>
 				<div class="col-md-8">
 					<div role="tab" id="ex_2">
@@ -152,8 +157,9 @@
 					</div>
 					<div id="collapse_ex_2" class="collapse" role="tabpanel" aria-labelledby="ex_2">
 						<div class="jumbotron">
-							<code>{{code_2}}</code>
-							<br><br>
+							<p>component.html</p>
+							<pre><code>{{code_2}}</code></pre><br>
+							<p>component.ts</p>
 							<pre><code>{{column_2_code}}</code></pre>
 						</div>
 					</div>
@@ -162,8 +168,11 @@
 
 			<div class="row row-in-tab">
 				<div class="col-md-4">
-					<go-table class="table table-striped table-border table-sm table-responsive" [paging]="true" [itemsPerPage]=4 [maxSize]=2
-						[showCard]="true" cardClass="card-block card-header card-inverse" [filterAll]="false" [columns]="columns_3" [data]="data" id='table_column_filter'></go-table>
+					<strong>Filter</strong><br>
+					<go-table id="table_filter" class="table table-striped table-border table-sm table-responsive" 
+						[itemsPerPage]=4 cardClass="card-block card-header card-inverse" 
+						[columns]="columns_3" [data]="data" >
+					</go-table>
 				</div>
 				<div class="col-md-8">
 					<div role="tab" id="ex_3">
@@ -174,8 +183,9 @@
 					</div>
 					<div id="collapse_ex_3" class="collapse" role="tabpanel" aria-labelledby="ex_3">
 						<div class="jumbotron">
-							<code>{{code_3}}</code>
-							<br><br>
+							<p>component.html</p>
+							<pre><code>{{code_3}}</code></pre><br>
+							<p>component.ts</p>
 							<pre><code>{{column_3_code}}</code></pre>
 						</div>
 					</div>
@@ -184,24 +194,14 @@
 
 			<div class="row row-in-tab">
 				<div class="col-md-4">
-					<go-table class="table table-striped table-border table-sm" [useFixedData]="true" [paging]="true" [itemsPerPage]=1 [maxSize]=4
-						[datalength]=6 [showCard]="true" cardClass="card-block card-header card-inverse" [filterAll]="true" [columns]="columns_4"
-						[data]="data_4" (onTableChanged)="tableChanged($event)" id='table_fetch'></go-table>
+					<strong>Fetch Data and Max Size</strong><br>
+					<go-table  id="table_fetch" class="table table-striped table-border table-sm" 
+						[useFixedData]="true" [datalength]=TotalRows [maxSize]=2 [itemsPerPage]=rowPerPage
+						[columns]="columns_4" [data]="data_4" (onTableChanged)="tableChanged($event)">
+					</go-table>
 				</div>
 				<div class="col-md-8">
-					<div role="tab" id="ex_4">
-						<h5 class="mb-0">
-							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_4" aria-expanded="false" aria-controls="collapse_ex_4"> Code
-								Example#4 </a>
-						</h5>
-					</div>
-					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
-						<div class="jumbotron">
-							<code>{{code_4}}</code>
-							<br><br>
-							<pre><code>{{column_4_code}}</code></pre>
-						</div>
-					</div>
+					<strong>ตารางแสดงข้อมูลที่ return มาจาก tableChanged($event) เมื่อตารางมีการเปลี่ยนแปลง</strong><br>
 					<table class="table table-striped table-border table-sm table-responsive">
 						<tr>
 							<th></th>
@@ -232,6 +232,20 @@
 							<td>{{page}}</td>
 						</tr>
 					</table>
+					<div role="tab" id="ex_4">
+						<h5 class="mb-0">
+							<a class="collapsed" data-toggle="collapse" href="#collapse_ex_4" aria-expanded="false" aria-controls="collapse_ex_4"> Code
+								Example#4 </a>
+						</h5>
+					</div>
+					<div id="collapse_ex_4" class="collapse" role="tabpanel" aria-labelledby="ex_4">
+						<div class="jumbotron">
+							<p>component.html</p>
+							<pre><code>{{code_4}}</code></pre><br>
+							<p>component.ts</p>
+							<pre><code>{{column_4_code}}</code></pre>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
