--- a/src/app/doc/table.document.html
+++ b/src/app/doc/table.document.html
@@ -118,7 +118,7 @@
 				<div class="col-md-4">
 					<strong>Basic and On Cell Clicked</strong><br>
 					<go-table id="table_basic" class="table table-striped table-border table-hover table-sm"
-						[filterAll]="false" cardClass="card-block card-header card-inverse" 
+						cardClass="card-block card-header card-inverse" 
 						[columns]="columns_1" [data]="data" (onCellClicked)="cellClick($event)">
 					</go-table>
 					<span><strong>ช่องที่ถูกคลิก:</strong> {{cellClicked}}</span>
@@ -168,9 +168,9 @@
 
 			<div class="row row-in-tab">
 				<div class="col-md-4">
-					<strong>Filter</strong><br>
+					<strong>Filter by column</strong><br>
 					<go-table id="table_filter" class="table table-striped table-border table-sm table-responsive" 
-						[itemsPerPage]=4 cardClass="card-block card-header card-inverse" 
+						[filterAll]="false" [itemsPerPage]=4 cardClass="card-block card-header card-inverse" 
 						[columns]="columns_3" [data]="data" >
 					</go-table>
 				</div>
