update table document for test date and thai date

--- a/src/app/doc/table.document.html
+++ b/src/app/doc/table.document.html
@@ -168,9 +168,9 @@
 
 			<div class="row row-in-tab">
 				<div class="col-md-4">
-					<strong>Filter by column</strong><br>
+					<strong>Filtering</strong><br>
 					<go-table id="table_filter" class="table table-striped table-border table-sm table-responsive" 
-						[filterAll]="false" [itemsPerPage]=4 cardClass="card-block card-header card-inverse" 
+						[itemsPerPage]=4 cardClass="card-block card-header card-inverse" 
 						[columns]="columns_3" [data]="data" >
 					</go-table>
 				</div>
