--- a/build_test/app/getting-start/getting-start.component.html
+++ b/build_test/app/getting-start/getting-start.component.html
@@ -76,6 +76,8 @@
                 </div>
 
                 <div  role="tabpanel" class="tab-pane fade" id="existingProject">
+                    <small>*หมายเหตุ: เพื่อประสิทธิภาพในการใช้งาน โปรดเรียกใช้ url {{webcdn}} สำหรับการใช้งานแบบ Production</small><br>
+                    <small>*หมายเหตุ: สำหรับเลข version ของ library แต่ละตัวให้เรียกใช้ตาม version update ปัจจุบัน</small>
                     <h3 class="card-header "><strong>Existing Angular Project</strong></h3>
                     <h5 class="card-header ">systemjs.config.js</h5>
                     <div class="card-block">
